--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "1.10.0",
+    "react-hot-toast": "^2.4.1",
     "resend": "^2.0.0"
   },
   "devDependencies": {
